# lynx-proxy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README copy.md  README.md  README.zh-CN.md  SECURITY.md  ca.cert  ca.key  cliff.toml  dist-workspace.toml  justfile  release-plz.toml  release.toml  rust-toolchain.toml  setup.sh  taskfile.yml
crates/lynx-cert/: Cargo.toml
crates/lynx-cert/src/: fingerprint.rs  lib.rs
crates/lynx-cli/: .gitignore  CHANGELOG.md  Cargo.toml  Readme.md  Readme.zh-CN.md
crates/lynx-cli/src/: cert_cmd.rs  lib.rs  log_config.rs  main.rs  proxy_server_app.rs  rules_cmd.rs  version_check.rs
crates/lynx-cli/src/cert/: macos.rs  mod.rs
crates/lynx-cli/src/daemon/: manager.rs  mod.rs  status.rs
crates/lynx-cli/tests/: cert_cli_tests.rs  rules_cli_tests.rs
crates/lynx-core/: .gitignore  CHANGELOG.md  Cargo.toml  Readme.md
crates/lynx-core/bindings/: AddRuleParams.ts  AppConfigModel.ts  Capture.ts  CaptureModel.ts  CaptureType.ts  ConnectPassProxyHandler.ts  DeleteRuleBody.ts  DeleteRuleParams.ts  GetAppConfigResponse.ts  Handler.ts  HandlerModel.ts  HandlerType.ts  MessageLog.ts  Readme.md  RecordingStatus.ts  RequestLogBody.ts  RequestModel.ts  ResponseBox.ts  ResponseCode.ts  RuleContent.ts  RuleDetailBody.ts  RuleUpdateContentParams.ts  SaveGeneralConfigParams.ts  SaveGeneralConfigResponse.ts  SendType.ts  UpdateRuleContentBody.ts  UpdateRuleNameParams.ts  ValidateError.ts  WebSocketLog.ts
crates/lynx-core/examples/: json_schema_example.rs  localhost_ip.rs  proxy_server_example.rs  remove_dir.rs
crates/lynx-core/examples/temp/: key.pem  root.pem
crates/lynx-core/examples/temp.HI44W70qLfrW/: key.pem  root.pem
crates/lynx-core/examples/temp.R1GhSa75yum3/: key.pem  root.pem
crates/lynx-core/examples/temp.m8XAqLZfSt9Y/: key.pem  root.pem
crates/lynx-core/examples/temp.y5JM2WLxmEDN/: key.pem  root.pem
crates/lynx-core/protocol/: ws.v1.asyncapi.yaml
crates/lynx-core/src/: ca_manage.rs  cert.rs  error.rs  gateway_service.rs  lib.rs  proxy_server.rs  proxy_service.rs  schedular.rs  server.rs  server_ca_manage.rs  server_context.rs  tunnel_proxy.rs  utils.rs
crates/lynx-core/src/adb/: devices.rs  executor.rs  mod.rs  platform_tools.rs  proxy.rs  types.rs
crates/lynx-core/src/bo/: rule_content.rs
crates/lynx-core/src/client/: http_client.rs  mod.rs  request_client.rs  reqwest_client.rs  websocket_client.rs
crates/lynx-core/src/common/: mod.rs
crates/lynx-core/src/config/: mod.rs
crates/lynx-core/src/entities/: app_config.rs  mod.rs  prelude.rs  request.rs  response.rs  rule.rs  rule_content.rs  rule_group.rs
crates/lynx-core/src/layers/: build_proxy_request.rs  extend_extension_layer.rs  mod.rs
crates/lynx-core/src/migration/: app_config.rs  m20250112_111416_create_rule_table.rs  mod.rs  request.rs  response.rs  rule.rs
crates/lynx-core/src/plugins/: http_request_plugin.rs  mod.rs
crates/lynx-core/src/proxy/: connect_upgraded.rs  handle_connect_req.rs  http_proxy.rs  https_proxy.rs  mod.rs  proxy_connect_request.rs  proxy_http_request.rs  proxy_tunnel_request.rs  proxy_ws_request.rs  rewind.rs  tunnel_proxy_by_stream.rs  util.rs  websocket_proxy.rs
crates/lynx-core/tests/: api_debug_executor_test.rs  api_debug_test.rs  auth_test.rs  capture_gate_test.rs  capture_https.rs  hello_test.rs  html_script_injector_test.rs  http.rs  https.rs  long_connection_test.rs  message_cache_memory_test.rs  message_event_channel_test.rs  proxy_forward_handler_test.rs  proxy_log_test.rs  proxy_test.rs  request_processing_handler_test.rs  request_processing_test.rs  rule.rs  self.rs  start_test_server.rs  subscribe_request.rs  test_helper.rs  websocket.rs  ws_protocol_test.rs
crates/lynx-db/: Cargo.toml
crates/lynx-db/src/: lib.rs
crates/lynx-db/src/dao/: mod.rs  (+6 more)
crates/lynx-dsl/: Cargo.toml  dsl.pest
crates/lynx-dsl/src/: ast.rs  compile.rs  error.rs  eval.rs  expr_parser.rs  facts.rs  format.rs  highlight.rs  ir.rs  lib.rs  parser.rs  query.rs  span.rs  validate.rs  wasm.rs
crates/lynx-dsl/tests/: compile_tests.rs  editor_story_examples.rs  eval_tests.rs  parser_tests.rs  real_world_scenarios_tests.rs  validate_panic_tests.rs
crates/lynx-log/: .gitignore  Cargo.toml  docker-compose.yml
crates/lynx-log/examples/: main.rs
crates/lynx-log/src/: lib.rs
crates/lynx-proxy/: CHANGELOG.md  Cargo.toml  Readme.md  Readme.zh-CN.md  eslint.config.mjs  orval.config.ts  package.json  pnpm-lock.yaml  postcss.config.js  rsbuild.config.ts  tailwind.config.js  test-import-rule.json  test-import-rules-complete.json  tsconfig.json  vite.config.ts  vitest.config.ts
crates/lynx-proxy/public/: manifest.json
crates/lynx-proxy/src/: App.tsx  i18n.ts  index.tsx  main.css  main.rs  pwa.ts  routeTree.gen.ts
crates/lynx-proxy/src-tauri/: Cargo.toml  tauri.conf.json
crates/lynx-request/: Cargo.toml
crates/lynx-request/src/: lib.rs
crates/lynx-storage/: Cargo.toml
crates/lynx-storage/src/: lib.rs
crates/lynx-storage/tests/: request_processing_dsl_match_tests.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250112_111416_create_rule_table.rs
crates/proxy/: Cargo.toml  ca.cert  ca.key  commona.rs
crates/proxy/examples/: seaorm.rs
crates/proxy/src/: cert.rs  http_proxy.rs  https_proxy.rs  lib.rs  main.rs  schedular.rs  server.rs  server_context.rs  tunnel_proxy.rs  utils.rs
crates/proxy/tests/: common.rs  http.rs  https.rs  self.rs  server.rs  start_test_server.rs  subscribe_request.rs
examples/hyper-client/: Cargo.toml
examples/hyper-client/src/: main.rs
examples/log-jaeger/: Cargo.toml  dist.toml  docker-compose.yml
examples/log-jaeger/src/: main.rs
examples/self_signed_ca/: Cargo.toml
examples/self_signed_ca/src/: main.rs
examples/websocket-client/: Cargo.toml  dist.toml
examples/websocket-client/src/: main.rs
examples/websocket-server/: Cargo.toml
examples/websocket-server/self_signed_certs/: cert.pem  key.pem
examples/websocket-server/src/: main.rs
migration/: Cargo.toml
migration/src/: m20250112_111416_create_rule_table.rs  main.rs
(+853 files in other folders)
