[workspace]
members = ["crates/lynx-core", "crates/lynx-proxy"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["suxin2017"]
description = "A proxy service"
edition = "2021"

[workspace.dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "debug-print",
] }
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.95"
