[workspace]
members = ["crates/lynx-core", "crates/lynx-proxy", "crates/lynx-cli"]
resolver = "2"

[workspace.package]
version = "0.0.2"
authors = ["suxin2017"]
description = "A proxy service"
edition = "2021"
license = "MIT"
documentation = "https://github.com/suxin2017/lynx"
homepage = "https://github.com/suxin2017/lynx"
repository = "https://github.com/suxin2017/lynx"


[workspace.dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "debug-print",
] }
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.95"
