[workspace]
members = ["crates/lynx-core", "crates/lynx-cli","examples/*", "crates/lynx-cert"]
exclude = ["third-libs"]
resolver = "2"

[workspace.package]
version = "0.1.4"
authors = ["suxin2017"]
description = "A proxy service"
edition = "2024"
license = "MIT"
documentation = "https://github.com/suxin2017/lynx"
homepage = "https://github.com/suxin2017/lynx"
repository = "https://github.com/suxin2017/lynx"

# Add this config to your root Cargo.toml (virtual manifest)
[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "debug-print",
] }
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.95"
rcgen = { version = "0.13.0", default-features = false, features = [
    "x509-parser",
    "pem",
    "ring",
] }
rustls-pemfile = "2.2.0"
include_dir = "0.7.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
