[package]
name = "lynx-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
include = ["src", "Cargo.toml", "README.md", "asserts"]

[dependencies]
lynx-core = { version = "0.0.5-alpha.1", path = "../lynx-core" }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.27", features = ["derive"] }
console = { version = "0.15.10", features = ["windows-console-colors"] }
directories = "6.0.0"
