[package]
name = "lynx-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
include = ["src", "Cargo.toml", "README.md", "assets"]

[dependencies]
lynx-core = { version = "0.1.5", path = "../lynx-core" }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.27", features = ["derive"] }
console = { version = "0.15.10", features = ["windows-console-colors"] }
directories = "6.0.0"
include_dir = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
