[package]
name = "lynx-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
include = ["src", "Cargo.toml", "README.md", "assets"]

[[bin]]
name = "lynx"
path = "src/main.rs"

[lib]
name = "lynx_cli"
path = "src/lib.rs"

[dependencies]
lynx-core = { version = "0.7.1", path = "../lynx-core" }
lynx-cert = { version = "0.7.1", path = "../lynx-cert" }
lynx-storage = { version = "0.7.1", path = "../lynx-storage" }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.27", features = ["derive"] }
console = { version = "0.15.10", features = ["windows-console-colors"] }
directories = "6.0.0"
include_dir = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
rustls = { workspace = true }
reqwest = { version = "0.12.18", features = ["json"] }

[dev-dependencies]
tempfile = "3.12.0"
lynx-storage = { version = "0.7.1", path = "../lynx-storage" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = "1.0"
