[package]
name = "lynx-core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
include = ["src", "Cargo.toml", "README.md"]

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.88"
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
http-body = "1"
http-body-util = { workspace = true }
hyper-util = { workspace = true }
hyper-tungstenite = { workspace = true }
http = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
hyper-rustls = { version = "0.27.3", default-features = false, features = [
    "webpki-roots",
    "webpki-tokio",
    "ring",
    "http1",
    "http2",
    "tls12",
] }
hyper-http-proxy = "1.1.0"
reqwest = { version = "0.12.18", features = [
    "rustls-tls-manual-roots",
    "gzip",
    "json",
    "stream",
    "rustls-tls",
    "cookies",
    "brotli",
    "deflate",
] }
webpki-roots = { workspace = true }
rustls-pemfile = { workspace = true }
moka = { version = "0.12.10", features = ["future"] }
rand = "0.8.5"
rcgen = { workspace = true }
time = "0.3.37"
rsa = "0.9.7"
once_cell = { workspace = true }
tower = { workspace = true }
chrono = "0.4.39"
derive_builder = "0.20.2"
local-ip-address = "0.6.3"
serde_json = "1.0.135"
serde = "1.0.217"
thiserror = "1.0"
nanoid = "0.4.0"
url = "2.5.4"
include_dir = { workspace = true }
mime_guess = "=2.0.5"
glob-match = "0.2.1"
regex = "1.11.1"
base64 = "0.22.1"
async-compression = { version = "0.4.18", features = [
    "gzip",
    "deflate",
    "brotli",
    "tokio",
] }
lynx-cert = { path = "../lynx-cert" }
lynx-storage = { path = "../lynx-storage" }
pin-project-lite = { workspace = true }
axum = { version="0.8.4",features=["macros", "ws"]}
tower-http = { version = "0.6.4", features = ["cors", "fs"] }
dashmap = "6.1.0"
lynx-log = {path = "../lynx-log"}
socket2 = "0.5"


[dev-dependencies]
dotenv = "0.15.0"
tempdir = "0.3.7"
tempfile = "3.12.0"
lynx-mock = { path = "../lynx-mock" }
async-once-cell = "0.5.4"
tokio-test = "0.4.4"
reqwest-websocket = "0.5.0"
