[package]
name = "lynx-log"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
tracing-opentelemetry = "0.31"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.30" }
sea-orm = { version = "1.1.0", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
derive_builder = "0.20.2"
tower = { workspace = true }