[package]
name = "lynx-proxy"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
include = ["src", "Cargo.toml", "README.md"]

[dependencies]
lynx-core = { path = "../lynx-core" }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
