[package]
name = "lynx-proxy"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
include = ["src", "Cargo.toml", "README.md"]

[dependencies]
lynx-core = { version = "0.0.1-alpha.0", features = [
    "test",
], path = "../lynx-core" }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
