[package]
name = "lynx-storage"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
glob = "0.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8.4"
http = { workspace = true }
http-body-util = { workspace = true }
thiserror = "1.0"
bytes = { workspace = true }
lynx-dsl = { path = "../lynx-dsl" }

[dev-dependencies]
tempfile = "3.12.0"
