[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["sqlx-sqlite", "runtime-tokio-rustls"]
