[package]
name = "websocket-client"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

tokio-tungstenite = { workspace = true, features = ["url"] }
tokio = { workspace = true }
url = "2.5.4"
http = { workspace = true }
webpki-roots = { workspace = true }
rustls = { workspace = true }
futures-util = { workspace = true }
rustls-pemfile = { workspace = true }
