[package]
name = "websocket-server"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
tokio-rustls = { workspace = true }
http-body-util = { workspace = true }
rustls-pemfile = { workspace = true }
